@@ -79,6 +79,11 @@ class TestCommands(tests.TestCase):
         c = self.get_command([option.Option('foo', hidden=False)])
         self.assertContainsRe(c.get_help_text(), '--foo')
 
+    def test_no_help_init_failure(self):
+        class cmd_foo(commands.Command):
+            pass
+        self.assertRaises(ValueError, cmd_foo)
+
 
 class TestGetAlias(tests.TestCase):
 
